Source/WebCore/platform/mediarecorder/cocoa/MediaRecorderPrivateWriterCocoa.mm
@@ -435,16 +435,18 @@ void MediaRecorderPrivateWriter::stopRecording()
     m_isStopping = true;
     // We hop to the main thread since finishing the video compressor might trigger starting the writer asynchronously.
     callOnMainThread([this, weakThis = makeWeakPtr(this)]() mutable {
-        auto whenFinished = [this] {
-            m_isStopping = false;
-            if (m_fetchDataCompletionHandler) {
-                auto buffer = WTFMove(m_data);
-                m_fetchDataCompletionHandler(WTFMove(buffer));
-            }
+        auto whenFinished = [this, weakThis] {
+            if (!weakThis)
+                return;
 
+            m_isStopping = false;
             m_isStopped = false;
             m_hasStartedWriting = false;
-            clear();
+
+            if (m_writer)
+                m_writer.clear();
+            if (m_fetchDataCompletionHandler)
+                m_fetchDataCompletionHandler(std::exchange(m_data, nullptr));
         };
 
         if (!m_hasStartedWriting) {
@@ -461,12 +463,8 @@ void MediaRecorderPrivateWriter::stopRecording()
             [m_writer flush];
             ALLOW_DEPRECATED_DECLARATIONS_END
 
-            [m_writer finishWritingWithCompletionHandler:[weakThis = WTFMove(weakThis), whenFinished = WTFMove(whenFinished)]() mutable {
-                callOnMainThread([weakThis = WTFMove(weakThis), whenFinished = WTFMove(whenFinished)]() mutable {
-                    if (!weakThis)
-                        return;
-                    whenFinished();
-                });
+            [m_writer finishWritingWithCompletionHandler:[whenFinished = WTFMove(whenFinished)]() mutable {
+                callOnMainThread(WTFMove(whenFinished));
             }];
         });
     });
