Source/WebCore/platform/mediarecorder/cocoa/VideoSampleBufferCompressor.mm
@@ -56,6 +56,10 @@ VideoSampleBufferCompressor::VideoSampleBufferCompressor(CMVideoCodecType output
 VideoSampleBufferCompressor::~VideoSampleBufferCompressor()
 {
     dispatch_release(m_serialDispatchQueue);
+    if (m_vtSession) {
+        VTCompressionSessionInvalidate(m_vtSession.get());
+        m_vtSession = nullptr;
+    }
 }
 
 bool VideoSampleBufferCompressor::initialize(CMBufferQueueTriggerCallback callback, void* callbackObject)
